--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <iframe 
   width="315" 
   height="560" 
-  src="https://www.youtube.com" 
-  title="YouTube video player" 
+  src="https://www.youtube-nocookie.com" 
+  title="YouTube Short" 
   frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
   allowfullscreen>
 </iframe>
+
 
 
 </body>
