Replace YouTube iframe with Google Maps iframe

--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
 </head>
 <body>
     <h1>Tigran Ter-Minasyan</h1>
-    <iframe 
-  width="315" 
-  height="560" 
-  src="https://www.youtube-nocookie.com" 
-  title="YouTube Short" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-  allowfullscreen>
-</iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m21!1m12!1m3!1d132.59541625769901!2d27.794525351072554!3d57.877232654204235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m6!3e6!4m0!4m3!3m2!1d57.8772576131295!2d27.794529374386784!5e0!3m2!1ses-419!2sec!4v1768783331190!5m2!1ses-419!2sec" width="999" height="999" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
 
