Update hero image in index.html

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             </video>
         </div>
         <div class="header-content">
-            <img src="cfc11186-2727-4b2d-bedb-47798a669dfa.jpg" alt="Tigran Ter-Minasyan" class="hero-image">
+            <img src="4d4f7020-f3a8-4333-8019-19eb6e9c258f.jpg" alt="Tigran Ter-Minasyan" class="hero-image">
             <h1>TigranSoundLab</h1>
             <p data-en="Professional Music Education" data-es="Educación Musical Profesional" data-ru="Профессиональное музыкальное образование" data-hy="Մասնագիտական ​​երաժշտական կրթություն">Professional Music Education</p>
             <p data-en="French Horn & Music Theory" data-es="Corno Francés y Teoría Musical" data-ru="Валторна и теория музыки" data-hy="Ֆրանսիական եղջյուր և երաժշտության տեսություն">French Horn & Music Theory</p>
@@ -485,4 +485,4 @@
         }
     </script>
 </body>
-</html>
+</html> este
