Update hero image and adjust styles in index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             position: relative;
             z-index: 1;
             color: white;
+            margin-top: -80px;
         }
 
         .hero-image {
@@ -64,6 +65,7 @@
             height: 250px;
             border-radius: 50%;
             object-fit: cover;
+            object-position: center 30%;
             border: 5px solid #ff6600;
             margin-bottom: 30px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
@@ -359,7 +361,7 @@
             </video>
         </div>
         <div class="header-content">
-            <img src="4d4f7020-f3a8-4333-8019-19eb6e9c258f.jpg" alt="Tigran Ter-Minasyan" class="hero-image">
+            <img src="b0f1533d-30d7-4cc0-a3a9-171a0782f72c.jpg" alt="Tigran Ter-Minasyan" class="hero-image">
             <h1>TigranSoundLab</h1>
             <p data-en="Professional Music Education" data-es="Educación Musical Profesional" data-ru="Профессиональное музыкальное образование" data-hy="Մասնագիտական ​​երաժշտական կրթություն">Professional Music Education</p>
             <p data-en="French Horn & Music Theory" data-es="Corno Francés y Teoría Musical" data-ru="Валторна и теория музыки" data-hy="Ֆրանսիական եղջյուր և երաժշտության տեսություն">French Horn & Music Theory</p>
@@ -485,4 +487,4 @@
         }
     </script>
 </body>
-</html> este
+</html>
