Improve layout with padding and margin adjustments
Added padding to various sections and adjusted margins for better layout.

--- a/index.html
+++ b/index.html
@@ -334,20 +334,35 @@
 
             .nav-links {
                 margin: 15px 0;
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             nav ul li {
-                margin: 0 10px;
+                margin: 5px 10px;
             }
 
             .instructor-section {
                 flex-direction: column;
                 text-align: center;
+                padding: 20px;
             }
 
             .hero-image {
                 width: 200px;
                 height: 200px;
+            }
+
+            .about-content, .contact-info, .video-container {
+                padding: 20px;
+            }
+
+            section {
+                padding: 40px 15px;
+            }
+
+            h2 {
+                font-size: 2rem;
             }
         }
     </style>
