--- a/index.html
+++ b/index.html
@@ -3,150 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TigranSoundLab - Music School</title>
+    <title>TigranSoundLab - Professional French Horn School</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
+        * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #f5f5f5 0%, #e0e0e0 100%);
             color: #333;
             line-height: 1.6;
         }
-
         header {
             position: relative;
             height: 100vh;
-            overflow: hidden;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
+            overflow: hidden;
         }
-
         .video-background {
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0; width: 100%; height: 100%;
             z-index: 0;
         }
-
         .video-background video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            width: 100%; height: 100%; object-fit: cover;
         }
-
         .video-background::after {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: 0; left: 0; width: 100%; height: 100%;
             background: rgba(0, 0, 0, 0.5);
         }
-
         .header-content {
             position: relative;
             z-index: 1;
             color: white;
-            margin-top: -80px;
+            margin-top: -50px;
         }
-
         .hero-image {
             width: 250px;
             height: 250px;
             border-radius: 50%;
             object-fit: cover;
-            /* AJUSTE: Subimos la imagen dentro del círculo */
-            object-position: center 15%; 
+            object-position: center 20%; /* Imagen subida dentro del círculo */
             border: 5px solid #ff6600;
             margin-bottom: 30px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
         }
-
         header h1 {
             font-size: 4rem;
             margin-bottom: 20px;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
             color: #ff6600;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.8);
         }
-
         header p {
             font-size: 1.5rem;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
             text-transform: uppercase;
             font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
-
         nav {
             position: sticky;
             top: 0;
             background: rgba(51, 51, 51, 0.95);
             padding: 15px 50px;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             display: flex;
             align-items: center;
             justify-content: space-between;
         }
+        .logo img { height: 50px; }
+        .nav-links { display: flex; list-style: none; gap: 20px; }
+        .nav-links a { color: white; text-decoration: none; font-weight: bold; }
+        .nav-links a:hover { color: #ff6600; }
 
-        .logo { height: 50px; }
-        .logo img { height: 100%; object-fit: contain; }
-
-        .nav-links { display: flex; list-style: none; flex: 1; justify-content: center; }
-        nav ul li { margin: 0 20px; }
-        nav ul li a { color: #fff; text-decoration: none; font-size: 1.1rem; transition: 0.3s; }
-        nav ul li a:hover { color: #ff6600; }
-
-        .language-switcher { display: flex; gap: 10px; }
         .language-switcher button {
             background: transparent;
             border: 1px solid #ff6600;
-            color: #fff;
-            padding: 5px 12px;
+            color: white;
+            padding: 5px 10px;
             cursor: pointer;
             border-radius: 5px;
+            margin-left: 5px;
         }
+        .language-switcher button.active { background: #ff6600; }
 
         section { padding: 80px 20px; max-width: 1200px; margin: 0 auto; }
-        h2 { font-size: 2.5rem; margin-bottom: 30px; text-align: center; color: #333; }
-        h2::after { content: '♪'; display: block; color: #ff6600; margin-top: 10px; }
+        .card { background: white; padding: 40px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); margin-bottom: 40px; }
+        h2 { text-align: center; margin-bottom: 40px; font-size: 2.5rem; }
+        h2::after { content: '♪'; display: block; color: #ff6600; }
 
-        .about-content, .video-container, .service-card, .instructor-section, .contact-info {
-            background: rgba(255, 255, 255, 0.9);
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
-        }
+        .services-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; }
+        .service-card { padding: 30px; border-radius: 15px; background: #f9f9f9; border-left: 5px solid #ff6600; }
 
         .instructor-section { display: flex; gap: 40px; align-items: center; flex-wrap: wrap; }
         .instructor-image { width: 300px; height: 300px; border-radius: 15px; object-fit: cover; }
-        .instructor-bio { flex: 1; min-width: 300px; }
 
-        .gallery-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
+        .gallery-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
         .gallery-item { width: 100%; height: 250px; object-fit: cover; border-radius: 10px; transition: 0.3s; }
         .gallery-item:hover { transform: scale(1.05); }
 
-        footer { background: #333; color: white; text-align: center; padding: 30px; }
-
-        @media (max-width: 768px) {
-            header h1 { font-size: 2.5rem; }
-            nav { flex-direction: column; padding: 15px; }
-            .instructor-section { flex-direction: column; text-align: center; }
-        }
+        footer { background: #333; color: white; text-align: center; padding: 40px; }
     </style>
 </head>
 <body>
@@ -157,49 +115,69 @@
             </video>
         </div>
         <div class="header-content">
-            <!-- La imagen ahora está más arriba dentro del círculo -->
-            <img src="b0f1533d-30d7-4cc0-a3a9-171a0782f72c.jpg" alt="Tigran Ter-Minasyan" class="hero-image">
+            <img src="b0f1533d-30d7-4cc0-a3a9-171a0782f72c.jpg" alt="Tigran" class="hero-image">
             <h1>TigranSoundLab</h1>
             <p>PROFESSIONAL FRENCH HORN SCHOOL AND MUSIC EDUCATION</p>
         </div>
     </header>
 
     <nav>
-        <div class="logo">
-            <img src="1a41a4f5-0afe-4466-af73-08ca5b41fdf5.jpg" alt="Logo">
-        </div>
+        <div class="logo"><img src="1a41a4f5-0afe-4466-af73-08ca5b41fdf5.jpg" alt="Logo"></div>
         <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#instructor">Instructor</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" data-en="About" data-es="Sobre mí">About</a></li>
+            <li><a href="#services" data-en="Services" data-es="Servicios">Services</a></li>
+            <li><a href="#instructor" data-en="Instructor" data-es="Instructor">Instructor</a></li>
+            <li><a href="#gallery" data-en="Gallery" data-es="Galería">Gallery</a></li>
+            <li><a href="#contact" data-en="Contact" data-es="Contacto">Contact</a></li>
         </ul>
         <div class="language-switcher">
-            <button onclick="changeLanguage('en')">EN</button>
-            <button onclick="changeLanguage('es')">ES</button>
+            <button onclick="setLang('en')" id="btn-en" class="active">EN</button>
+            <button onclick="setLang('es')" id="btn-es">ES</button>
+            <button onclick="setLang('ru')" id="btn-ru">RU</button>
+            <button onclick="setLang('hy')" id="btn-hy">HY</button>
         </div>
     </nav>
 
     <section id="about">
-        <h2>About My School</h2>
-        <div class="about-content">
-            <p>Welcome to my music school. I offer professional instruction in French Horn and Music Theory for all levels.</p>
+        <h2 data-en="About My School" data-es="Sobre mi escuela">About My School</h2>
+        <div class="card">
+            <p data-en="Welcome to my professional French Horn school. I offer elite musical education tailored to your needs." 
+               data-es="Bienvenidos a mi escuela profesional de Corno Francés. Ofrezco educación musical de élite adaptada a tus necesidades.">
+               Welcome to my professional French Horn school. I offer elite musical education tailored to your needs.
+            </p>
+        </div>
+    </section>
+
+    <section id="services">
+        <h2 data-en="My Services" data-es="Mis Servicios">My Services</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <h3 data-en="French Horn Lessons" data-es="Clases de Corno">French Horn Lessons</h3>
+                <p data-en="Personalized lessons for all levels." data-es="Clases personalizadas para todos los niveles.">Personalized lessons for all levels.</p>
+            </div>
+            <div class="service-card">
+                <h3 data-en="Music Theory" data-es="Teoría Musical">Music Theory</h3>
+                <p data-en="Comprehensive theory and harmony." data-es="Teoría y armonía integral.">Comprehensive theory and harmony.</p>
+            </div>
         </div>
     </section>
 
     <section id="instructor">
-        <h2>Meet Me</h2>
-        <div class="instructor-section">
+        <h2 data-en="Meet Me" data-es="Conóceme">Meet Me</h2>
+        <div class="card instructor-section">
             <img src="2340e4e1-3bda-4867-85b5-c56afcce0b0a.jpg" alt="Tigran" class="instructor-image">
-            <div class="instructor-bio">
+            <div>
                 <h3>Tigran Ter-Minasyan</h3>
-                <p>I worked as principal horn of the OSNE and now perform concerts for diplomats like Denis Danilidis.</p>
+                <p data-en="I served as principal horn of the OSNE and perform for international diplomats." 
+                   data-es="Fui corno principal de la OSNE y actúo para diplomáticos internacionales.">
+                   I served as principal horn of the OSNE and perform for international diplomats.
+                </p>
             </div>
         </div>
     </section>
 
     <section id="gallery">
-        <h2>Gallery</h2>
+        <h2 data-en="Gallery" data-es="Galería">Gallery</h2>
         <div class="gallery-grid">
             <img src="86970af0-d727-41cb-a5cf-40a262900e3e.jpg" class="gallery-item">
             <img src="f18644d4-874a-4769-a9d8-45aad396b0d1.jpg" class="gallery-item">
@@ -208,14 +186,25 @@
         </div>
     </section>
 
+    <section id="contact">
+        <h2 data-en="Contact Me" data-es="Contáctame">Contact Me</h2>
+        <div class="card" style="text-align: center;">
+            <p>Email: <a href="mailto:tigransoundlab@gmail.com">tigransoundlab@gmail.com</a></p>
+            <p>WhatsApp: <a href="tel:+593999688850">+593 999 6 888 50</a></p>
+        </div>
+    </section>
+
     <footer>
-        <p>© 2026 TigranSoundLab. All rights reserved.</p>
+        <p>© 2026 TigranSoundLab | Quito, Ecuador</p>
     </footer>
 
     <script>
-        function changeLanguage(lang) {
-            // Lógica de cambio de idioma simplificada para el ejemplo
-            alert('Language changed to ' + lang);
+        function setLang(lang) {
+            document.querySelectorAll('[data-' + lang + ']').forEach(el => {
+                el.textContent = el.getAttribute('data-' + lang);
+            });
+            document.querySelectorAll('.language-switcher button').forEach(btn => btn.classList.remove('active'));
+            document.getElementById('btn-' + lang).classList.add('active');
         }
     </script>
 </body>
